--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img  class="header__main-illustration" src="./images/header-image.png" alt="Картинка: мальчик и собака">
 
       <!--Квадрат-->
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <!--Основное содержимое страницы-->
@@ -88,13 +88,11 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/5MgBikgcWnY"
-            frameborder="0" allowfullscreen>
+          <iframe class="video__iframe" width="515" height="316"
+            src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen>
           </iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/arj7oStGLkU"
-            frameborder="0" allowfullscreen>
+          <iframe class="video__iframe" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen>
           </iframe>
         </div>
       </section>
@@ -219,7 +217,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
     </main>
 
@@ -228,16 +226,16 @@
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <nav class="resources__logo-zone">
-        <a href="#">
+        <a class="decoration-none" href="#">
           <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Ссылка arzamas">
         </a>
-        <a href="#">
+        <a class="decoration-none" href="#">
           <img class="resources__logo" src="./images/resources-n1.svg" alt="Ссылка n1">
         </a>
-        <a href="#">
+        <a class="decoration-none" href="#">
           <img class="resources__logo" src="./images/resources-strelka.svg" alt="Ссылка strelka">
         </a>
-        <a href="#">
+        <a class="decoration-none" href="#">
           <img class="resources__logo" src="./images/resources-polka.svg" alt="Ссылка polka">
         </a>
       </nav>
